namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-app
  labels:
    team: backend
    environment: production
