oom-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: oom-demo
  namespace: demo-app
spec:
  containers:
  - name: eater
    image: polinux/stress
    # alloue 250M de RAM et la garde
    command: ["stress"]
    args: ["--vm", "1", "--vm-bytes", "250M",
           "--vm-hang", "1"]
    resources:
      requests:
        cpu: 50m
        memory: 64Mi
      limits:
        cpu: 200m
        memory: 100Mi
