pod-secret-volume.yaml
# Pod : deux réglages en plus par rapport à un ConfigMap
apiVersion: v1
kind: Pod
metadata:
  name: secret-volume-demo
spec:
  containers:
  - name: app
    image: busybox:1.37@sha256:9db7b59979c38555a39def84a31fb98b5296952f9e3afd4f6f11f05b07adfab0
    command: ['sh', '-c', 'cat /etc/secrets/username && echo && cat /etc/secrets/password && sleep 3600']
    volumeMounts:
    - name: secret-volume
      mountPath: /etc/secrets
      readOnly: true # réflexe 1
  volumes:
  - name: secret-volume
    secret:
      secretName: db-credentials # secretName (et non name comme pour un configMap)
      defaultMode: 0400  # réflexe 2 : lecture seule pour le propriétaire
