throttle-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: throttle-demo
  namespace: demo-app
spec:
  containers:
  - name: burner
    image: busybox:1.37
    # boucle infinie = brûle du CPU
    command: ["sh", "-c", "while true; do :; done"]
    resources:
      requests:
        cpu: 100m
        memory: 64Mi
      limits:
        cpu: 200m
        memory: 64Mi
